--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "bootstrap": "^4.3.1",
+    "bs-stepper": "^1.4.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "react": "^16.8.4",
     "react-bootstrap-carousel": "^3.4.1",
     "react-dom": "^16.8.4",
